# gwatch

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  lefthook.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  diff_viewer.rs  git_engine.rs  lib.rs  main.rs  review_state.rs  types.rs  watcher.rs
src/ui/: app.rs  diff_view.rs  handlers.rs  layout.rs  layout_helpers.rs  mod.rs  overlays.rs  render.rs  render_helpers.rs  theme.rs
tests/: app_test.rs  cli_additional_test.rs  cli_test.rs  config_test.rs  diff_view_test.rs  diff_viewer_test.rs  git_engine_test.rs  handlers_test.rs  review_state_test.rs  theme_test.rs  types_test.rs  watcher_test.rs
