[package]
name = "gwatch"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Claudio Sanchez <personal@csanchez.cl>"]
description = "Real-time Git-powered directory monitor with line-by-line diff visualization"
license = "MIT"
repository = "https://github.com/csaltos/gwatch"
homepage = "https://github.com/csaltos/gwatch"
readme = "README.md"
keywords = ["git", "diff", "monitor", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# File Watching
notify = "8"
notify-debouncer-mini = "0.7"

# Git Integration
git2 = "0.20"

# Diff Engine
similar = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# CLI Arguments
clap = { version = "4", features = ["derive"] }

# Path Handling / Gitignore
ignore = "=0.4.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Glob patterns
glob = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
